--- a/web/css/form.css
+++ b/web/css/form.css
@@ -87,11 +87,10 @@ form{
     min-width: min-content;
     display: flex;
     flex-direction: column;
-    height: max-content;
+    height: min-content;
     flex-basis: 100%;
     max-width: 400px;
     border-radius: 4px;
-    padding-top: 200px;
 }
 
 form h1, .submit {
@@ -213,5 +212,5 @@ a{
 }
 
 #form-login input{
-    width: auto;
+    width: inherit;
 }
