front changes for user and main page

--- a/web/css/form.css
+++ b/web/css/form.css
@@ -94,7 +94,7 @@ form{
     padding-top: 200px;
 }
 
-form h1, .submit {
+form h1, .submit, .button {
     margin: 10px 0;
 }
 input{
@@ -122,7 +122,7 @@ textarea{
     resize: none;
 }
 
-button, input[type=submit]{
+button, input[type=submit], input[type=button]{
     flex-basis: 30%;
     padding: 10px;
     text-transform: capitalize;
@@ -139,7 +139,7 @@ button{
     background-color: #4e4e4e;
 }
 
-input[type=submit]:hover, button:hover{
+input[type=submit]:hover,input[type=button]:hover, button:hover{
     background-color: #242323;
     cursor: pointer;
 }
