cleanup + small additions

--- a/web/css/form.css
+++ b/web/css/form.css
@@ -76,7 +76,7 @@ nav a:hover{
 
 
 .content{
-    height: 90vh;
+    height: max-content;
     display: flex;
     justify-content: center;
     align-items: center;
