--- a/web/css/find.css
+++ b/web/css/find.css
@@ -72,7 +72,7 @@ nav a:hover{
 
 
 .content{
-    height: 90vh;
+    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
